--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ar">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/Logo.PNG" />
+    <link rel="icon" type="image/png" href="./Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Mustafa Selim</title>
+    <link rel="stylesheet" href="./index.css"> 
   </head>
   <body>
     <div id="root"></div>
