--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Mustafa Selim</title>
     <link rel="stylesheet" href="./index.css"> 
+    <link rel="preload" href="/fonts/ExpoArabicLight.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+    <title>Mustafa Selim</title>
+
   </head>
   <body>
     <div id="root"></div>
