--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="ar">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./Logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css"> 
-    <link rel="preload" href="/fonts/ExpoArabicLight.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-    <title>Mustafa Selim</title>
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="./favicon.ico" />
+  <link rel="apple-touch-icon" href="./favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./index.css">
+  <link rel="preload" href="/fonts/ExpoArabicLight.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <title>دكتور مصطفي سليم</title>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
